--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectKey=npm
-sonar.organization=devopshint
+sonar.projectKey=ArpitInfra11_Integrate-SonarQube-for-Node.js-with-GithHub-Actions
+sonar.organization=arpitinfra11
 sonar.sources=.
